# MPAS-ESM

./: .gitmodules  README.md  build.sh
envs/: derecho_env_gnu_ddt.sh  derecho_env_intel.sh
src/CMEPS-interface/: CMakeLists.txt
src/CMEPS-interface/shared/: CMakeLists.txt
src/MOM6_interface/: CMakeLists.txt
